todos/manifests/front/httproute-front.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: todos-front
  namespace: front-app
spec:
  hostnames:
    - todos.polipixel.link
  parentRefs:
    - name: default-gateway
      namespace: gateway
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: todos-front
          port: 80
